Footer responsive (mobile) order.

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
             </div>
 
-            <div class="flex-display">
+            <div class="footer__terms">
                 <a class="footer__link" href="#">Terms and conditions</a>
                 <div class="footer__link__divider"></div>
                 <a class="footer__link" href="#">Use and privacy policy</a>
