Responsive (?) changes to header

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <section class="header bottom-borer">
         <div class="header__content content-container">
 
-            <div class="flex-display">
-                <p class="margin-right">+1 (XXX) XXX-XXXX</p>
-                <p class="margin-right">info@example.com</p>
+            <div class="header__contact">
+                <p class="header__number">+1 (XXX) XXX-XXXX</p>
+                <p class="header__mail">info@example.com</p>
             </div>
 
-            <nav>
+            <nav class="header__access">
                 <ul>
                     <li><a class="header__link" href="#">Sign In</a></li>
                     <li><a class="header__link" href="#">Register</a></li>
