Footer Fixed to all pages

--- a/arrivals.html
+++ b/arrivals.html
@@ -52,18 +52,18 @@
             <div class="flex-display">
 
                 <svg class="header__icon margin-right" xmlns="http://www.w3.org/2000/svg"
-                class="icon icon-tabler icon-tabler-search" width="44" height="44" viewBox="0 0 24 24"
-                stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <circle cx="10" cy="10" r="7" />
-                <line x1="21" y1="21" x2="15" y2="15" />
-            </svg>
+                    class="icon icon-tabler icon-tabler-search" width="44" height="44" viewBox="0 0 24 24"
+                    stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <circle cx="10" cy="10" r="7" />
+                    <line x1="21" y1="21" x2="15" y2="15" />
+                </svg>
 
-            <svg class="header__icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                stroke-width="1.5" stroke="#2c3e50" class="w-6 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
-            </svg>
+                <svg class="header__icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    stroke-width="1.5" stroke="#2c3e50" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+                </svg>
 
             </div>
 
@@ -211,7 +211,6 @@
 
     </section>
 
-
     <footer class="footer">
         <div class="footer__content content-container">
 
@@ -260,7 +259,7 @@
 
             </div>
 
-            <div class="flex-display flex-wrap">
+            <div class="footer__terms">
                 <a class="footer__link" href="#">Terms and conditions</a>
                 <div class="footer__link__divider"></div>
                 <a class="footer__link" href="#">Use and privacy policy</a>
