--- a/product.html
+++ b/product.html
@@ -76,7 +76,8 @@
         <div class="product__content">
             <h1 class="product__title">Vermeil Interlaced Earrings</h1>
             <h2 class="product__price">$4,500</h2>
-            <p class="product__description">In hac habitasse platea dictumst. Mauris imperdiet, odio in aliquet semper, orci dui commodo nunc, vitae
+            <p class="product__description">In hac habitasse platea dictumst. Mauris imperdiet, odio in aliquet semper,
+                orci dui commodo nunc, vitae
                 condimentum lectus ipsum quis leo. Nullam convallis nisi aliquam, eleifend leo non, euismod ex.</p>
 
             <form class="product__form">
@@ -151,7 +152,7 @@
 
             </div>
 
-            <div class="flex-display">
+            <div class="footer__terms">
                 <a class="footer__link" href="#">Terms and conditions</a>
                 <div class="footer__link__divider"></div>
                 <a class="footer__link" href="#">Use and privacy policy</a>
