--- a/aboutus.html
+++ b/aboutus.html
@@ -45,7 +45,7 @@
                     <li><a class="header__link" href="index.html">Home</a></li>
                     <li><a class="header__link" href="arrivals.html">New Arrivals</a></li>
                     <li><a class="header__link header__link--active" href="aboutus.html">About Us</a></li>
-                    <li><a class="header__link" href="#">Contact</a></li>
+                    <li><a class="header__link" href="contact.html">Contact</a></li>
                 </ul>
             </nav>
 
