--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Arrivals</title>
+    <title>AboutUs</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,9 +43,9 @@
             <nav>
                 <ul>
                     <li><a class="header__link" href="index.html">Home</a></li>
-                    <li><a class="header__link header__link--active" href="arrivals.html">New Arrivals</a></li>
+                    <li><a class="header__link" href="arrivals.html">New Arrivals</a></li>
                     <li><a class="header__link" href="aboutus.html">About Us</a></li>
-                    <li><a class="header__link" href="contact.html">Contact</a></li>
+                    <li><a class="header__link header__link--active" href="contact.html">Contact</a></li>
                 </ul>
             </nav>
 
@@ -71,145 +71,126 @@
     </header>
 
 
-    <section class="hero hero-arrivals">
-        <div class="hero__content content-container">
-            <h1 class="hero__heading">Get 20% off your first purchase</h1>
-            <p class="hero__subheading">Aenean quis quam lectus. Nulla sit amet augue nec orci euismod consectetur nec
-                non lacus. Sed at semper ante. </p>
+    <div class="contact-bg"></div>
 
-            <a href="#"><button class="hero__button">Get Now</button></a>
 
-        </div>
-    </section>
+        <main class="contact content-container">
 
-    <section class="showcase content-container">
+            <div class="contact__info">
 
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product1_hoops.jpg" alt="Product 1">
-                <h3 class="showcase__product__name">Vermeil Interlaced Earrings </h3>
-                <p class="showcase__product_price">$4,500</p>
+                <div class="contact__info-item">
+
+                    <div class="contact__info-data">
+
+                        <svg class="contact__info-data-svg" xmlns="http://www.w3.org/2000/svg"
+                            class="icon icon-tabler icon-tabler-phone" width="44" height="44" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path
+                                d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+                        </svg>
+
+                        <h2 class="contact__info-title">Call us</h2>
+
+                    </div>
+
+                    <p class="contact__info-description">+1 (XXX) XXX-XXXX</p>
+
+                </div>
+
+                <div class="contact__info-item">
+
+                    <div class="contact__info-data">
+
+                        <svg class="contact__info-data-svg" xmlns="http://www.w3.org/2000/svg"
+                            class="icon icon-tabler icon-tabler-mail" width="44" height="44" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <rect x="3" y="5" width="18" height="14" rx="2" />
+                            <polyline points="3 7 12 13 21 7" />
+                        </svg>
+
+                        <h2 class="contact__info-title">E-mail us</h2>
+
+                    </div>
+
+                    <p class="contact__info-description">info@example.com</p>
+
+                </div>
+
+                <div class="contact__info-item">
+
+                    <div class="contact__info-data">
+
+                        <svg class="contact__info-data-svg" xmlns="http://www.w3.org/2000/svg"
+                            class="icon icon-tabler icon-tabler-map-pin" width="44" height="44" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <circle cx="12" cy="11" r="3" />
+                            <path
+                                d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+                        </svg>
+
+                        <h2 class="contact__info-title">Location</h2>
+
+                    </div>
+
+                    <p class="contact__info-description">123 Main St, 48 Avenue, Anytown, AT 90210</p>
+
+                </div>
+
+                <div class="contact__info-item">
+
+                    <div class="contact__info-data">
+
+                        <svg class="contact__info-data-svg" xmlns="http://www.w3.org/2000/svg"
+                            class="icon icon-tabler icon-tabler-clock" width="44" height="44" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <circle cx="12" cy="12" r="9" />
+                            <polyline points="12 7 12 12 15 15" />
+                        </svg>
+
+                        <h2 class="contact__info-title">Bussines hours</h2>
+
+                    </div>
+
+                    <p class="contact__info-description">Mon-Fri: <span>10 am - 8 pm.</span></p>
+                    <p class="contact__info-description">Sat: <span>10 am - 2 pm.</span></p>
+                    <p class="contact__info-description">Sun: <span>Closed.</span></p>
+
+                </div>
+
             </div>
-        </a>
 
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product2_pendulum.jpg" alt="Product 2">
-                <h3 class="showcase__product__name">Vermeil Pendulum Necklace</h3>
-                <p class="showcase__product_price">$4,500</p>
-            </div>
-        </a>
+            <form class="contact__form">
 
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product3_set.jpg" alt="Product 3">
-                <h3 class="showcase__product__name">14K Gold Ring Set</h3>
-                <p class="showcase__product_price">$4,500</p>
-            </div>
-        </a>
+                <h1 class="contact__title">Contact us</h1>
 
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product4_pink.jpg" alt="Product 4">
-                <h3 class="showcase__product__name">Vermail Pink Stone Ring</h3>
-                <p class="showcase__product_price">$4,500</p>
-            </div>
-        </a>
+                <div class="contact__field">
+                    <!-- <label class="contact__field-label" for="name">Name</label> -->
+                    <input class="contact__field-input" type="text" placeholder="Enter your name" id="name">
 
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product5_pinkT.jpg" alt="Product 5">
-                <h3 class="showcase__product__name">14K Gold Pink Topaz Ring</h3>
-                <p class="showcase__product_price">$4,500</p>
-            </div>
-        </a>
+                    <!--    <label class="contact__field-label" for="email">E-mail</label> -->
+                    <input class="contact__field-input" type="email" placeholder="Enter a valid e-mail address"
+                        id="email">
 
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product6_Snake.jpg" alt="Product 6">
-                <h3 class="showcase__product__name">Silver Snake Ring</h3>
-                <p class="showcase__product_price">$4,500</p>
-            </div>
-        </a>
+                    <!-- <label class="contact__field-label" for="message">Message</label> -->
+                    <textarea class="contact__field-input contact__field-text" placeholder="Enter message" id="message"></textarea>
+                </div>
 
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product7_Diamodeye.jpg" alt="Product 7">
-                <h3 class="showcase__product__name">Silver Diamond-Eye Ring</h3>
-                <p class="showcase__product_price">$4,500</p>
-            </div>
-        </a>
-
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product8_DiamondSquare.jpg" alt="Product 8">
-                <h3 class="showcase__product__name">Silver Diamond Square Ring</h3>
-                <p class="showcase__product_price">$4,500</p>
-            </div>
-        </a>
-
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product9_Engraved.jpg" alt="Product 9">
-                <h3 class="showcase__product__name">Silver Engraved Ring</h3>
-                <p class="showcase__product_price">$4,500</p>
-            </div>
-        </a>
-
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product10_Oval.jpg" alt="Product 10">
-                <h3 class="showcase__product__name">Vermail Oval Diamonds Ring</h3>
-                <p class="showcase__product_price">$4,500</p>
-            </div>
-        </a>
-
-        <!-- CUSTOMIZE YOUR PIECE WITH OUR FINE SELECTION OF GEMSTONES -->
-
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Stone4_Amber.jpg" alt="Stone 1">
-                <h3 class="showcase__product__name">Amber</h3>
-            </div>
-        </a>
-
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Stone1_BlueTopaz.jpg" alt="Stone 2">
-                <h3 class="showcase__product__name">Swiss Blue Topaz </h3>
-            </div>
-        </a>
-
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Stone2_PinkTopaz.jpg" alt="Stone 3">
-                <h3 class="showcase__product__name">Natural Pink Topaz </h3>
-            </div>
-        </a>
-
-        <a href="product.html">
-            <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Stone3_Diamonds.jpg" alt="Stone 4">
-                <h3 class="showcase__product__name">Daimonds</h3>
-            </div>
-        </a>
-
-        <a class="showcase__photo showcase__photo--knee" href="product.html"></a>
-        <a class="showcase__photo showcase__photo--cheek" href="product.html"></a>
-
-        <div class="showcase__cta">
-            <h2 class="showcase__cta__title">Interested in a custom piece?</h2>
-            <p class="showcase__cta__description">Sed eget tristique suscipit ex nec.
-                Nulla facilisis metus ac tempus dictum. Orci varius natoque penatibus et magnis dis
-                parturient montes, nascetur ridiculus mus.</p>
-            <form>
-                <button class="showcase__button">Quote Custom Design</button>
+                <div class="contact__field">
+                    <input type="submit" value="Submit" class="contact__button">
+                </div>
             </form>
-        </div>
 
-        <div class="showcase__photo showcase__empty"></div>
 
-    </section>
+        </main>
+
 
     <footer class="footer">
         <div class="footer__content content-container">
