--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <li><a class="header__link header__link--active" href="index.html">Home</a></li>
                     <li><a class="header__link" href="arrivals.html">New Arrivals</a></li>
                     <li><a class="header__link" href="aboutus.html">About Us</a></li>
-                    <li><a class="header__link" href="#">Contact</a></li>
+                    <li><a class="header__link" href="contact.html">Contact</a></li>
                 </ul>
             </nav>
 
