index lazy loading

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img class="showcase__product__image" src="Index-Home_Images/Product1_GoldChain.jpg" alt="Product 1">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product1_GoldChain.jpg" alt="Product 1">
                 <h3 class="showcase__product__name">14K Gold Chain</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -108,7 +108,7 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img class="showcase__product__image" src="Index-Home_Images/Product2_Gold&Silver.jpg" alt="Product 2">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product2_Gold&Silver.jpg" alt="Product 2">
                 <h3 class="showcase__product__name">Gold & Silver Ring Set</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -116,7 +116,7 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img class="showcase__product__image" src="Index-Home_Images/Product3_BlueTopazSet.jpg" alt="Product 3">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product3_BlueTopazSet.jpg" alt="Product 3">
                 <h3 class="showcase__product__name">Blue Topaz Set</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -124,7 +124,7 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img class="showcase__product__image" src="Index-Home_Images/Product4_SilverRing.jpg" alt="Product 4">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product4_SilverRing.jpg" alt="Product 4">
                 <h3 class="showcase__product__name">Silver Diamond Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -132,7 +132,7 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img class="showcase__product__image" src="Index-Home_Images/Product5_RoseGoldRing.jpg" alt="Product 5">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product5_RoseGoldRing.jpg" alt="Product 5">
                 <h3 class="showcase__product__name">14K Rose Gold Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -140,7 +140,7 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img class="showcase__product__image" src="Index-Home_Images/Product6_FishRing.jpg" alt="Product 6">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product6_FishRing.jpg" alt="Product 6">
                 <h3 class="showcase__product__name">Silver Fish Ring </h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -162,7 +162,7 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img class="showcase__product__image" src="Index-Home_Images/Product7_diamondearrings.jpg"
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product7_diamondearrings.jpg"
                     alt="Product 7">
                 <h3 class="showcase__product__name">Diamond Earrings</h3>
                 <p class="showcase__product_price">$4,500</p>
@@ -171,7 +171,7 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img class="showcase__product__image" src="Index-Home_Images/Product8_SilverRing.jpg" alt="Product 8">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product8_SilverRing.jpg" alt="Product 8">
                 <h3 class="showcase__product__name">Silver Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -179,7 +179,7 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img class="showcase__product__image" src="Index-Home_Images/Product9_GloriousDiamondRing.jpg"
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product9_GloriousDiamondRing.jpg"
                     alt="Product 9">
                 <h3 class="showcase__product__name">Glorious Diamond Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
@@ -188,7 +188,7 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img class="showcase__product__image" src="Index-Home_Images/Product10_DiamondNeckless.jpg"
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product10_DiamondNeckless.jpg"
                     alt="Product 10">
                 <h3 class="showcase__product__name">Diamond Neckless</h3>
                 <p class="showcase__product_price">$4,500</p>
@@ -198,7 +198,7 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img class="showcase__product__image" src="Index-Home_Images/Product11_FrostDiamondEarrings.jpg"
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product11_FrostDiamondEarrings.jpg"
                     alt="Product 11">
                 <h3 class="showcase__product__name">Frost Diamond Earrings</h3>
                 <p class="showcase__product_price">$4,500</p>
@@ -207,7 +207,7 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img class="showcase__product__image" src="Index-Home_Images/Product12_Diamond Ring Pair.jpg"
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product12_Diamond Ring Pair.jpg"
                     alt="Product 12">
                 <h3 class="showcase__product__name">Diamond Ring Pair</h3>
                 <p class="showcase__product_price">$4,500</p>
@@ -235,7 +235,7 @@
     <section class="showcase-home content-container">
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product1_hoops.jpg" alt="Product 1">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product1_hoops.jpg" alt="Product 1">
                 <h3 class="showcase__product__name">Vermeil Interlaced Earrings </h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -243,7 +243,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product2_pendulum.jpg" alt="Product 2">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product2_pendulum.jpg" alt="Product 2">
                 <h3 class="showcase__product__name">Vermeil Pendulum Necklace</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -251,7 +251,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product3_set.jpg" alt="Product 3">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product3_set.jpg" alt="Product 3">
                 <h3 class="showcase__product__name">14K Gold Ring Set</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -259,7 +259,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product4_pink.jpg" alt="Product 4">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product4_pink.jpg" alt="Product 4">
                 <h3 class="showcase__product__name">Vermail Pink Stone Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -267,7 +267,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product5_pinkT.jpg" alt="Product 5">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product5_pinkT.jpg" alt="Product 5">
                 <h3 class="showcase__product__name">14K Gold Pink Topaz Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -275,7 +275,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product6_Snake.jpg" alt="Product 6">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product6_Snake.jpg" alt="Product 6">
                 <h3 class="showcase__product__name">Silver Snake Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
