preload of styles

--- a/arrivals.html
+++ b/arrivals.html
@@ -11,8 +11,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;500;700&display=swap" rel="stylesheet">
 
+    <!-- Preload -->
+    <link rel="Preload" href="styles/normalize.css" as="style">
     <link rel="stylesheet" href="styles/normalize.css">
+
+    <link rel="Preload" href="styles/style.css" as="style">
     <link rel="stylesheet" href="styles/style.css">
+    
 </head>
 
 <body>
@@ -86,7 +91,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product1_hoops.jpg" alt="Product 1">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product1_hoops.jpg" alt="Product 1">
                 <h3 class="showcase__product__name">Vermeil Interlaced Earrings </h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -94,7 +99,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product2_pendulum.jpg" alt="Product 2">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product2_pendulum.jpg" alt="Product 2">
                 <h3 class="showcase__product__name">Vermeil Pendulum Necklace</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -102,7 +107,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product3_set.jpg" alt="Product 3">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product3_set.jpg" alt="Product 3">
                 <h3 class="showcase__product__name">14K Gold Ring Set</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -110,7 +115,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product4_pink.jpg" alt="Product 4">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product4_pink.jpg" alt="Product 4">
                 <h3 class="showcase__product__name">Vermail Pink Stone Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -118,7 +123,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product5_pinkT.jpg" alt="Product 5">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product5_pinkT.jpg" alt="Product 5">
                 <h3 class="showcase__product__name">14K Gold Pink Topaz Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -126,7 +131,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product6_Snake.jpg" alt="Product 6">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product6_Snake.jpg" alt="Product 6">
                 <h3 class="showcase__product__name">Silver Snake Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -150,7 +155,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product9_Engraved.jpg" alt="Product 9">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product9_Engraved.jpg" alt="Product 9">
                 <h3 class="showcase__product__name">Silver Engraved Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -158,7 +163,7 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Product10_Oval.jpg" alt="Product 10">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product10_Oval.jpg" alt="Product 10">
                 <h3 class="showcase__product__name">Vermail Oval Diamonds Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -168,28 +173,28 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Stone4_Amber.jpg" alt="Stone 1">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Stone4_Amber.jpg" alt="Stone 1">
                 <h3 class="showcase__product__name">Amber</h3>
             </div>
         </a>
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Stone1_BlueTopaz.jpg" alt="Stone 2">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Stone1_BlueTopaz.jpg" alt="Stone 2">
                 <h3 class="showcase__product__name">Swiss Blue Topaz </h3>
             </div>
         </a>
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Stone2_PinkTopaz.jpg" alt="Stone 3">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Stone2_PinkTopaz.jpg" alt="Stone 3">
                 <h3 class="showcase__product__name">Natural Pink Topaz </h3>
             </div>
         </a>
 
         <a href="product.html">
             <div class="showcase__product">
-                <img class="showcase__product__image" src="Arrivals_Images/Stone3_Diamonds.jpg" alt="Stone 4">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Stone3_Diamonds.jpg" alt="Stone 4">
                 <h3 class="showcase__product__name">Daimonds</h3>
             </div>
         </a>
