--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;500;700&display=swap" rel="stylesheet">
 
+    <!-- Preload -->
+    <link rel="Preload" href="styles/normalize.css" as="style">
     <link rel="stylesheet" href="styles/normalize.css">
+
+    <link rel="Preload" href="styles/style.css" as="style">
     <link rel="stylesheet" href="styles/style.css">
+
 </head>
 
 <body>
@@ -74,122 +79,117 @@
     <div class="contact-bg"></div>
 
 
-        <main class="contact content-container">
+    <main class="contact content-container">
 
-            <div class="contact__info">
+        <div class="contact__info">
 
-                <div class="contact__info-item">
+            <div class="contact__info-item">
 
-                    <div class="contact__info-data">
+                <div class="contact__info-data">
 
-                        <svg class="contact__info-data-svg" xmlns="http://www.w3.org/2000/svg"
-                            class="icon icon-tabler icon-tabler-phone" width="44" height="44" viewBox="0 0 24 24"
-                            stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-                            stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                            <path
-                                d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
-                        </svg>
+                    <svg class="contact__info-data-svg" xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-phone" width="44" height="44" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path
+                            d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+                    </svg>
 
-                        <h2 class="contact__info-title">Call us</h2>
-
-                    </div>
-
-                    <p class="contact__info-description">+1 (XXX) XXX-XXXX</p>
+                    <h2 class="contact__info-title">Call us</h2>
 
                 </div>
 
-                <div class="contact__info-item">
-
-                    <div class="contact__info-data">
-
-                        <svg class="contact__info-data-svg" xmlns="http://www.w3.org/2000/svg"
-                            class="icon icon-tabler icon-tabler-mail" width="44" height="44" viewBox="0 0 24 24"
-                            stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-                            stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                            <rect x="3" y="5" width="18" height="14" rx="2" />
-                            <polyline points="3 7 12 13 21 7" />
-                        </svg>
-
-                        <h2 class="contact__info-title">E-mail us</h2>
-
-                    </div>
-
-                    <p class="contact__info-description">info@example.com</p>
-
-                </div>
-
-                <div class="contact__info-item">
-
-                    <div class="contact__info-data">
-
-                        <svg class="contact__info-data-svg" xmlns="http://www.w3.org/2000/svg"
-                            class="icon icon-tabler icon-tabler-map-pin" width="44" height="44" viewBox="0 0 24 24"
-                            stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-                            stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                            <circle cx="12" cy="11" r="3" />
-                            <path
-                                d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
-                        </svg>
-
-                        <h2 class="contact__info-title">Location</h2>
-
-                    </div>
-
-                    <p class="contact__info-description">123 Main St, 48 Avenue, Anytown, AT 90210</p>
-
-                </div>
-
-                <div class="contact__info-item">
-
-                    <div class="contact__info-data">
-
-                        <svg class="contact__info-data-svg" xmlns="http://www.w3.org/2000/svg"
-                            class="icon icon-tabler icon-tabler-clock" width="44" height="44" viewBox="0 0 24 24"
-                            stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-                            stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                            <circle cx="12" cy="12" r="9" />
-                            <polyline points="12 7 12 12 15 15" />
-                        </svg>
-
-                        <h2 class="contact__info-title">Bussines hours</h2>
-
-                    </div>
-
-                    <p class="contact__info-description">Mon-Fri: <span>10 am - 8 pm.</span></p>
-                    <p class="contact__info-description">Sat: <span>10 am - 2 pm.</span></p>
-                    <p class="contact__info-description">Sun: <span>Closed.</span></p>
-
-                </div>
+                <p class="contact__info-description">+1 (XXX) XXX-XXXX</p>
 
             </div>
 
-            <form class="contact__form">
+            <div class="contact__info-item">
 
-                <h1 class="contact__title">Contact us</h1>
+                <div class="contact__info-data">
 
-                <div class="contact__field">
-                    <!-- <label class="contact__field-label" for="name">Name</label> -->
-                    <input class="contact__field-input" type="text" placeholder="Enter your name" id="name">
+                    <svg class="contact__info-data-svg" xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-mail" width="44" height="44" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <rect x="3" y="5" width="18" height="14" rx="2" />
+                        <polyline points="3 7 12 13 21 7" />
+                    </svg>
 
-                    <!--    <label class="contact__field-label" for="email">E-mail</label> -->
-                    <input class="contact__field-input" type="email" placeholder="Enter a valid e-mail address"
-                        id="email">
+                    <h2 class="contact__info-title">E-mail us</h2>
 
-                    <!-- <label class="contact__field-label" for="message">Message</label> -->
-                    <textarea class="contact__field-input contact__field-text" placeholder="Enter message" id="message"></textarea>
                 </div>
 
-                <div class="contact__field">
-                    <input type="submit" value="Submit" class="contact__button">
+                <p class="contact__info-description">info@example.com</p>
+
+            </div>
+
+            <div class="contact__info-item">
+
+                <div class="contact__info-data">
+
+                    <svg class="contact__info-data-svg" xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-map-pin" width="44" height="44" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <circle cx="12" cy="11" r="3" />
+                        <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+                    </svg>
+
+                    <h2 class="contact__info-title">Location</h2>
+
                 </div>
-            </form>
+
+                <p class="contact__info-description">123 Main St, 48 Avenue, Anytown, AT 90210</p>
+
+            </div>
+
+            <div class="contact__info-item">
+
+                <div class="contact__info-data">
+
+                    <svg class="contact__info-data-svg" xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-clock" width="44" height="44" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <circle cx="12" cy="12" r="9" />
+                        <polyline points="12 7 12 12 15 15" />
+                    </svg>
+
+                    <h2 class="contact__info-title">Bussines hours</h2>
+
+                </div>
+
+                <p class="contact__info-description">Mon-Fri: <span>10 am - 8 pm.</span></p>
+                <p class="contact__info-description">Sat: <span>10 am - 2 pm.</span></p>
+                <p class="contact__info-description">Sun: <span>Closed.</span></p>
+
+            </div>
+
+        </div>
+
+        <form class="contact__form">
+
+            <h1 class="contact__title">Contact us</h1>
+
+            <div class="contact__field">
+                <!-- <label class="contact__field-label" for="name">Name</label> -->
+                <input class="contact__field-input" type="text" placeholder="Enter your name" id="name">
+
+                <!--    <label class="contact__field-label" for="email">E-mail</label> -->
+                <input class="contact__field-input" type="email" placeholder="Enter a valid e-mail address" id="email">
+
+                <!-- <label class="contact__field-label" for="message">Message</label> -->
+                <textarea class="contact__field-input contact__field-text" placeholder="Enter message"
+                    id="message"></textarea>
+            </div>
+
+            <div class="contact__field">
+                <input type="submit" value="Submit" class="contact__button">
+            </div>
+        </form>
 
 
-        </main>
+    </main>
 
 
     <footer class="footer">
