--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;500;700&display=swap" rel="stylesheet">
 
+    <!-- Preload -->
+    <link rel="Preload" href="styles/normalize.css" as="style">
     <link rel="stylesheet" href="styles/normalize.css">
+
+    <link rel="Preload" href="styles/style.css" as="style">
     <link rel="stylesheet" href="styles/style.css">
+
 </head>
 
 <body>
