--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product1_GoldChain.jpg" alt="Product 1">
+                <picture>
+                    <source srcset="Index-Home_Images/Product1_GoldChain.webp" type="image/webp">
+                    <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product1_GoldChain.jpg"
+                        alt="Product 1">
+                </picture>
                 <h3 class="showcase__product__name">14K Gold Chain</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -113,7 +117,8 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product2_Gold&Silver.jpg" alt="Product 2">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product2_Gold&Silver.jpg"
+                    alt="Product 2">
                 <h3 class="showcase__product__name">Gold & Silver Ring Set</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -121,7 +126,8 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product3_BlueTopazSet.jpg" alt="Product 3">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product3_BlueTopazSet.jpg"
+                    alt="Product 3">
                 <h3 class="showcase__product__name">Blue Topaz Set</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -129,7 +135,8 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product4_SilverRing.jpg" alt="Product 4">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product4_SilverRing.jpg"
+                    alt="Product 4">
                 <h3 class="showcase__product__name">Silver Diamond Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -137,7 +144,8 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product5_RoseGoldRing.jpg" alt="Product 5">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product5_RoseGoldRing.jpg"
+                    alt="Product 5">
                 <h3 class="showcase__product__name">14K Rose Gold Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -145,7 +153,8 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product6_FishRing.jpg" alt="Product 6">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product6_FishRing.jpg"
+                    alt="Product 6">
                 <h3 class="showcase__product__name">Silver Fish Ring </h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -167,8 +176,8 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product7_diamondearrings.jpg"
-                    alt="Product 7">
+                <img loading="lazy" class="showcase__product__image"
+                    src="Index-Home_Images/Product7_diamondearrings.jpg" alt="Product 7">
                 <h3 class="showcase__product__name">Diamond Earrings</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -176,7 +185,8 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product8_SilverRing.jpg" alt="Product 8">
+                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product8_SilverRing.jpg"
+                    alt="Product 8">
                 <h3 class="showcase__product__name">Silver Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -184,8 +194,8 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product9_GloriousDiamondRing.jpg"
-                    alt="Product 9">
+                <img loading="lazy" class="showcase__product__image"
+                    src="Index-Home_Images/Product9_GloriousDiamondRing.jpg" alt="Product 9">
                 <h3 class="showcase__product__name">Glorious Diamond Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -193,8 +203,8 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product10_DiamondNeckless.jpg"
-                    alt="Product 10">
+                <img loading="lazy" class="showcase__product__image"
+                    src="Index-Home_Images/Product10_DiamondNeckless.jpg" alt="Product 10">
                 <h3 class="showcase__product__name">Diamond Neckless</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -203,8 +213,8 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product11_FrostDiamondEarrings.jpg"
-                    alt="Product 11">
+                <img loading="lazy" class="showcase__product__image"
+                    src="Index-Home_Images/Product11_FrostDiamondEarrings.jpg" alt="Product 11">
                 <h3 class="showcase__product__name">Frost Diamond Earrings</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -212,8 +222,8 @@
 
         <a href="product.html" class="showcase__product">
             <div>
-                <img loading="lazy" class="showcase__product__image" src="Index-Home_Images/Product12_Diamond Ring Pair.jpg"
-                    alt="Product 12">
+                <img loading="lazy" class="showcase__product__image"
+                    src="Index-Home_Images/Product12_Diamond Ring Pair.jpg" alt="Product 12">
                 <h3 class="showcase__product__name">Diamond Ring Pair</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -240,7 +250,8 @@
     <section class="showcase-home content-container">
         <a href="product.html">
             <div class="showcase__product">
-                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product1_hoops.jpg" alt="Product 1">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product1_hoops.jpg"
+                    alt="Product 1">
                 <h3 class="showcase__product__name">Vermeil Interlaced Earrings </h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -248,7 +259,8 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product2_pendulum.jpg" alt="Product 2">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product2_pendulum.jpg"
+                    alt="Product 2">
                 <h3 class="showcase__product__name">Vermeil Pendulum Necklace</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -256,7 +268,8 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product3_set.jpg" alt="Product 3">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product3_set.jpg"
+                    alt="Product 3">
                 <h3 class="showcase__product__name">14K Gold Ring Set</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -264,7 +277,8 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product4_pink.jpg" alt="Product 4">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product4_pink.jpg"
+                    alt="Product 4">
                 <h3 class="showcase__product__name">Vermail Pink Stone Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -272,7 +286,8 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product5_pinkT.jpg" alt="Product 5">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product5_pinkT.jpg"
+                    alt="Product 5">
                 <h3 class="showcase__product__name">14K Gold Pink Topaz Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
@@ -280,7 +295,8 @@
 
         <a href="product.html">
             <div class="showcase__product">
-                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product6_Snake.jpg" alt="Product 6">
+                <img loading="lazy" class="showcase__product__image" src="Arrivals_Images/Product6_Snake.jpg"
+                    alt="Product 6">
                 <h3 class="showcase__product__name">Silver Snake Ring</h3>
                 <p class="showcase__product_price">$4,500</p>
             </div>
